--- a/css/css.css
+++ b/css/css.css
@@ -73,15 +73,6 @@ h3
     margin-bottom: 15px;
 }
 
-.marginBr
-{
-    margin-top: 50px;
-}
-
-.marginBrMid
-{
-    margin-top: 50px;
-}
 
 .paddingSpace
 {
@@ -116,7 +107,6 @@ nav
     justify-content: space-between;
     align-items: center;
     margin: 0 50px;
-    height: 52px;
 }
 
 #logo
@@ -154,7 +144,7 @@ li.navButton:hover
 
 #recherche
 {
-    margin: 30px 15px;
+    margin: 0 15px 30px 15px;
 }
 
 /* SEARCH BAR */
@@ -287,7 +277,6 @@ input
     cursor: pointer;
     color: #0065FC;
     background: #DEEBFF;
-    border-radius: #DEEBFF 45px;
     border: 2px #DEEBFF solid;
 }
 
@@ -352,6 +341,7 @@ input
 .hebergementResult
 {
     width: 68%;
+    margin-bottom: 25px;
     padding: 40px;
     display: flex;
     flex-flow: column wrap;
@@ -415,12 +405,12 @@ input
     padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 .cardDescription p
 {
-    font-size: 15px;
+    font-size: 14px;
     margin: 10px 0;
 }
 
@@ -461,6 +451,7 @@ input
 {
     padding: 3px;
     display: flex;
+    flex-direction: row;
     background-color: #ffffff;
     border-radius: 20px;
     box-shadow: #afafaf 0 1px 10px;
@@ -485,6 +476,12 @@ img.cardPicturePop
     object-fit: cover;
     border-radius: 20px 0 0 20px;
 }
+.cardDetail
+{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
 
 .cardDescriptionPop
 {
@@ -496,13 +493,19 @@ img.cardPicturePop
 
 .cardDescriptionPop p
 {
-    font-size: 15px;
-    margin: 10px 0;
+    font-size: 14px;
+    margin: 10px 0 0 0;
 }
 
 .cardDescriptionPop h3
 {
     font-size: 17px;
+}
+
+.cardNotation
+{
+    display: flex;
+    padding: 0 0 10px 10px;
 }
 
 .switchBlue
@@ -578,7 +581,7 @@ img.activitesImgSmall
 
 .marginTop
 {
-    margin-top: 25px;
+    margin-top: 0;
 }
 
 .marginRight
@@ -703,12 +706,17 @@ footer
 
     #activities
     {
-        padding: 0 25px;
+        padding: 0 15px;
     }
 
     .marginRight
     {
         margin: 0;
+    }
+
+    .marginLine.columnSplitGalerie
+    {
+        margin-bottom: 0;
     }
 
     .marginTop
@@ -850,7 +858,7 @@ footer
     {
         display: flex;
         flex-direction: column;
-        margin: 20px 0;
+        margin: 0;
     }
 
     /*_____________________________*/
@@ -870,7 +878,6 @@ footer
     cursor: pointer;
     color: #0065FC;
     background: #DEEBFF;
-    border-radius: #DEEBFF 45px;
     border: 2px #DEEBFF solid;
 }
 
@@ -890,7 +897,7 @@ footer
     {
         width: auto;
         margin: 0;
-        padding: 0 10px 0 10px;
+        padding: 0 15px;
         border-radius: 0;
     }
 
@@ -916,7 +923,7 @@ footer
     {
         width: auto;
         margin: 25px 0 0 0;
-        padding: 0 10px 0 10px;
+        padding: 0 15px;
         border-radius: 0;
         background-color: #FFFFFF;
     }
