--- a/css/css.css
+++ b/css/css.css
@@ -537,6 +537,7 @@ img.cardPicturePop
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    max-height: 600px;
 }
 
 .columnGalerie
@@ -613,11 +614,11 @@ footer
 {
     width: 95%;
     display: flex;
+    justify-content: space-between;
 }
 
 .footerElement
 {
-    width: 35%;
     margin-right: 10%;
 }
 
